force-app/main/default/objects/Contact/fields/Email_Verified__c.field-meta.xml
<CustomField>
    <fullName>Email_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the customer&apos;s email address has been successfully validated</description>
    <inlineHelpText>This field is automatically updated by the verification process</inlineHelpText>
    <label>Email Verified</label>
    <type>Checkbox</type>
</CustomField>