force-app/main/default/objects/Contact/fields/Phone_Verified__c.field-meta.xml
<CustomField>
    <fullName>Phone_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the customer&apos;s phone number has been successfully validated</description>
    <inlineHelpText>This field is automatically updated by the verification process</inlineHelpText>
    <label>Phone Verified</label>
    <type>Checkbox</type>
</CustomField>