force-app/main/default/objects/Contact/fields/Total_Lifetime_Spending__c.field-meta.xml
<CustomField>
    <fullName>Total_Lifetime_Spending__c</fullName>
    <label>Total Lifetime Spending</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>