force-app/main/default/objects/Contact/fields/Total_Number_Of_Booking__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_Of_Booking__c</fullName>
    <label>Total Number Of Booking</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>